--- a/multiiocapp/pom.xml
+++ b/multiiocapp/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>webmvc</groupId>
-  <artifactId>initmvcapp</artifactId>
+  <artifactId>multiiocapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>initmvcapp Maven Webapp</name>
+  <name>multiiocapp Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -20,7 +20,7 @@
   </properties>
 
   <dependencies>
-	<dependency>
+    <dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-webmvc</artifactId>
 	    <version>5.3.20</version>
@@ -39,13 +39,11 @@
 	    <groupId>javax.servlet.jsp</groupId>
 	    <artifactId>javax.servlet.jsp-api</artifactId>
 	    <version>2.3.3</version>
-</dependency>
-
-    
+	  </dependency>
   </dependencies>
 
   <build>
-    <finalName>initmvcapp</finalName>
+    <finalName>multiiocapp</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
